--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,8 @@ img {
 /* header*/
 .title-header {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -100,7 +99,6 @@ img {
     text-transform: uppercase;
     color: #2e2f42;
 }
-
 
 .main-nav {
     font-family: "Roboto", sans-serif;
@@ -169,6 +167,7 @@ img {
     padding: 188px 0px;
     position: relative;
     max-width: 1440px;
+    transform: translateY(0%);
 }
 
 .container-business {
@@ -337,9 +336,7 @@ img {
 .team-card {
     background: #fff;
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-block {
@@ -434,14 +431,17 @@ img {
     row-gap: 48px;
 }
 
-.portfolio-item {
+.portfolio-card {
     position: relative;
     overflow: hidden;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
-.portfolio_item:hover {
+.portfolio_card:hover
+.portfolio_card:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 .image-container {
@@ -450,27 +450,25 @@ img {
 }
 
 .image_container img {
-
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overflow-text {
     top: 0;
-    left: 0;
-    width: 100%;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
     height: 100%;
+    width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    background: #4d5ae5;
+    letter-spacing: 0.02em;
+    left: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-size: 16px;
-    color: #f4f4fd;
     position: absolute;
-    line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 40px 32px;
 }
@@ -497,8 +495,6 @@ img {
     color: #2e2f42;
     margin-bottom: 72px;
 }
-
-
 
 .portfolio-name {
     font-family: "Roboto", sans-serif;
