--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,12 @@ img {
 }
 
 /* header*/
+
 .title-header {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .main-nav-item {
@@ -47,13 +48,12 @@ img {
 
 .main-nav-link.active {
     color: #404bbf;
-
 }
 
 .main-nav-link.active::after {
-    content: '';
     width: 100%;
     position: absolute;
+    content: '';
     left: 0;
     bottom: -1px;
     height: 4px;
@@ -66,8 +66,8 @@ img {
     color: #404bbf;
 }
 
-.container-header {
 
+.container-header {
     display: flex;
     align-items: center;
 }
@@ -99,6 +99,7 @@ img {
     text-transform: uppercase;
     color: #2e2f42;
 }
+
 
 .main-nav {
     font-family: "Roboto", sans-serif;
