--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,17 @@ img {
 
 .title-header {
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .main-nav-item {
+    position: relative;
+}
+
+.main-nav-link-studio {
+    color: #404bbf;
+    padding: 24px 0;
+    display: block;
     position: relative;
 }
 
