--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,6 @@ img {
 
 /*business */
 
-
 .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
     background-size: cover;
@@ -225,12 +224,10 @@ img {
 }
 
 /*skills */
-
 .skills {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-
 
 
 .icon-block {
@@ -303,14 +300,12 @@ img {
 }
 
 /*team*/
-
 .team-description {
     display: flex;
     align-items: center;
     margin: 0 auto;
     gap: 24px;
 }
-
 
 .container-team {
     margin: 0 auto;
@@ -343,6 +338,11 @@ img {
     background: #fff;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.team-card:hover,
+.team-card:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .team-block {
@@ -392,7 +392,6 @@ img {
     background-color: #404bbf;
 }
 
-
 .social-link {
     display: flex;
     align-items: center;
@@ -417,8 +416,7 @@ img {
     padding-top: 8px;
 }
 
-/*portfolio*/
-
+/*our portfolio*/
 .portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -441,12 +439,6 @@ img {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
-}
-
-.portfolio_card:hover
-.portfolio_card:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
 }
 
 .image-container {
@@ -476,6 +468,12 @@ img {
     position: absolute;
     letter-spacing: 0.02em;
     padding: 40px 32px;
+}
+
+.portfolio_card:hover, 
+.portfolio_card:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overflow-text {
