--- a/css/styles.css
+++ b/css/styles.css
@@ -51,19 +51,20 @@ img {
     position: relative;
 }
 
-.main-nav-link.active {
-    color: #404bbf;
-}
-
 .main-nav-link.active::after {
+    content: '';
     width: 100%;
     position: absolute;
-    content: '';
     left: 0;
     bottom: -1px;
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.main-nav-link.active {
+    color: #404bbf;
 }
 
 .main-nav-link:hover,
