--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,25 @@
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color: #FFFFFF;
+    background-color: #fff;
 }
 
-ul,
-ol {
+/* reset */
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 
 h1,
@@ -23,61 +34,24 @@ p {
 
 img {
     display: block;
-    max-width: 100%;
 }
 
-.container {
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    max-width: 1158px;
-}
+/* header */
 
-/* header*/
-
-.title-header {
+.page-header {
     border-bottom: 1px solid #e7e9fc;
-
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
-.main-nav-item {
-    position: relative;
-}
-
-.main-nav-link-studio {
-    color: #404bbf;
-    padding: 24px 0;
-    display: block;
-    position: relative;
-}
-
-.main-nav-link.active::after {
-    content: '';
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-}
-
-.main-nav-link:hover,
-.main-nav-link:focus {
-    color: #404bbf;
-}
-
-
-.container-header {
+.header-container {
     display: flex;
     align-items: center;
 }
 
-.main-header {
-    background: #fff;
+.header-nav {
     display: flex;
     align-items: center;
+
 }
 
 .logo {
@@ -85,178 +59,168 @@ img {
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    letter-spacing: 0.03em;
+}
+
+.header-logo {
     padding: 24px 0;
     margin-right: 76px;
 }
 
-.logo-text {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 117%;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+.header-logo .logo-part {
     color: #2e2f42;
 }
 
-
-.main-nav {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+.nav-list {
     display: flex;
     align-items: center;
     gap: 40px;
 }
 
-.main-nav-link {
-    color: #2e2f42;
+/* .nav-item {} */
+
+.nav-link {
     padding: 24px 0;
     display: block;
-    position: relative;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #2e2f42;
+    letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-nav-link:hover,
-.main-nav-link:focus {
-    color: #404bbf;
+.nav-link.current {
+    position: relative;
+    ;
 }
 
-.header-address {
+.nav-link.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+}
+
+.contacts {
     font-style: normal;
     margin-left: auto;
 }
 
-.main-address {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+.contacts-list {
     display: flex;
     align-items: center;
     gap: 40px;
 }
 
-.main-address-link {
-    color: #434455;
+.two-section-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.two-section-list-item {
+    width: calc((100% - 72px) / 4)
+}
+
+.contacts-link {
     display: block;
     padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #434455;
+    letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-address-link:hover,
-.main-address-link:focus {
-    color: #404bbf
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.nav-link.current {
+    color: #404bbf;
 }
 
-/*business */
+.footer-logo .logo-part {
+    color: #f4f4fd;
+}
 
-.hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
+.page-footer {
+    background-color: #2e2f42;
+    padding: 100px 0;
+}
+
+.text-footer {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #f4f4fd;
+    letter-spacing: 0.02em;
+    max-width: 264px;
+}
+
+.hero-section {
+    background-color: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 188px 0px;
-    position: relative;
-    max-width: 1440px;
-    transform: translateY(0%);
-}
-
-.container-business {
     margin: 0 auto;
-    padding: 0 15px;
-    max-width: 1158px;
 }
 
-.main-title {
-    font-family: "Roboto", sans-serif;
+.hero-title {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #fff;
-    text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    margin: 0 auto 48px;
     max-width: 496px;
+    margin: 0 auto 48px;
 }
 
-.main-button {
+.hero-btn {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    text-align: center;
     color: #fff;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     cursor: pointer;
-    border-radius: 4px;
-    padding: 16px 32px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    gap: 10px;
     display: block;
-    margin: 0 auto 48px;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
+    border-radius: 4px;
     border: none;
+
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-button:hover,
-.main-button:focus {
-    background-color: #404BBF;
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404bbf;
 }
 
-/*skills */
-.skills {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-
-.icon-block {
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    background: #f4f4fd;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 264px;
-    height: 112px;
-    margin-bottom: 8px;
-}
-
-.container-skills {
-    margin: 0 auto;
-    padding: 0 15 px;
-    max-width: 1158px;
-}
-
-.skills-description {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    gap: 24px;
-    align-items: stretch;
-}
-
-.skills-li {
-    width: calc((100% - 72px) / 4);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.section-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
     text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px
 }
 
 .visually-hidden {
@@ -272,130 +236,77 @@ img {
     overflow: hidden;
 }
 
-.skills-tittle {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-    padding-top: 8px;
-}
 
-.skills-text {
-    font-family: "Roboto", sans-serif;
+
+.section-item-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    flex-grow: 1;
 
 }
 
-/*team*/
-.team-description {
+.section-item-title-team {
+    text-align: center;
+}
+
+.section-item-text-team {
+    text-align: center;
+}
+
+.section-team {
+    background-color: #f4f4fd;
+}
+
+.section {
+    padding: 120px 0;
+}
+
+.team-item {
+    background-color: #ffffff;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+
+}
+
+.team-list {
     display: flex;
-    align-items: center;
-    margin: 0 auto;
     gap: 24px;
 }
 
-.container-team {
-    margin: 0 auto;
-    padding: 0 15 px;
-    max-width: 1158px;
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
-.team {
-    background: #f4f4fd;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 120px 0px;
-}
-
-.team-title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    text-transform: capitalize;
-    line-height: 111%;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    margin-bottom: 72px;
-}
-
-.team-card {
-    background: #fff;
-    border-radius: 0px 0px 4px 4px;
-    
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.team-card:hover,
-.team-card:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.team-block {
-    background: #fff;
+.name-position {
     padding: 32px 0;
 }
 
-.team-name {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    padding-top: 32px;
-    margin-bottom: 8px
+.team-icons {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
 }
 
-.team-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
-}
-
-
-.social-icons {
+.icons-link {
     width: 40px;
     height: 40px;
-    background-color: #4d5ae5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border-radius: 50%;
-}
-
-.icons {
-    fill: #f4f4fd;
-}
-
-.social-icons {
-    background-color: #404bbf;
 }
 
 .social-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -404,216 +315,106 @@ img {
     background-color: #404bbf;
 }
 
+.social-link-icon {
+    fill: #f4f4fd;
 
-.social-icons-block {
-    display: flex;
-    gap: 24px;
-    justify-content: center;
-    padding-top: 8px;
 }
 
-/*our portfolio*/
-.portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.container-portfolio {
-    margin: 0 auto;
-    padding: 0 15px;
-    max-width: 1158px;
-}
-
-.portfolio-description {
+.portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
     row-gap: 48px;
 }
 
-.portfolio-card {
+.portfolio-list-item {
+    width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .overlay {
+    transform: translatey(0%);
+}
+
+.tumb {
     position: relative;
     overflow: hidden;
+
 }
 
-.image-container {
-    position: relative;
-    overflow: hidden;
-}
-
-.image_container img {
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.overflow-text {
+.overlay {
+    position: absolute;
     top: 0;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #f4f4fd;
     padding: 40px 32px;
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
-    transform: translateY(100%);
+    transform: translatey(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    letter-spacing: 0.02em;
-    left: 0;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    position: absolute;
-    letter-spacing: 0.02em;
-    padding: 40px 32px;
 }
 
-.portfolio_card:hover, 
-.portfolio_card:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-item:hover .overflow-text {
-    transform: translateY(0);
-}
-
-.portfolio-block {
-    border-bottom: 1px solid #e7e9fc;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
+.apps-category {
     padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
-.portfolio-title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    text-transform: capitalize;
-    line-height: 111%;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    margin-bottom: 72px;
-}
-
-.portfolio-name {
-    font-family: "Roboto", sans-serif;
+.section-item-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-bottom: 8px
+    margin-bottom: 8px;
 }
 
-.portfolio-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-/*footer*/
-
-.main-footer {
-    background: #2e2f42;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.social-footer-box {
-    display: flex;
-    align-items: baseline;
-
-}
-
-.container-main-footer {
-    margin-right: 120px;
-
-}
-
-.logo-footer {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    display: inline-block;
-    margin-bottom: 16px;
-}
-
-.logo-text-footer {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 117%;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #f4f4fd;
-    display: inline-block;
-    margin-bottom: 16px;
-}
-
-.main-footer-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    max-width: 264px;
-    margin-bottom: 16px;
-}
-
-.social-footer-block {
-    flex-direction: column;
-    display: flex;
-}
-
-.social-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #fff;
-    display: inline-block;
-    margin-bottom: 16px;
-}
-
-
-.social-icons-list {
-    display: flex;
-    gap: 16px;
-}
-
-.social-icons-item {
-    width: 40px;
-    height: 40px;
-}
-
-.social-links {
+.icons {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
 }
 
-.social-links:hover,
-.social-links:focus {
+.footer-flex {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-box-logo {
+    margin-right: 120px
+}
+
+.text-social {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-icons-list {
+    display: flex;
+    gap: 16px;
+
+}
+
+.social-link-footer-hover:hover,
+.social-link-footer-hover:focus {
     background-color: #31d0aa;
-}
-
-
-.social-icon {
-    fill: #f4f4fd;
-    width: 24px;
-    height: 24px;
 }
